--- a/unsw-nb15.yaml
+++ b/unsw-nb15.yaml
@@ -1,4 +1,5 @@
 setup_options:
+  current_directory: ENV_PWD
   working_directory: ENV_PWD/unsw_nb15_dataset
 
 step_acquire_source_data:
@@ -8,7 +9,7 @@ step_feature_processing:
   packet_level:
 
   flow_level:
-    - ./src/scripts/zeek-wrapper.bash ./src/zeek/packages mlfeatures -r ${setup_options.working_directory}/17-2-2015_1.pcap
+    - ./src/scripts/zeek-wrapper.bash ${setup_options.current_directory}/src/zeek/packages ${setup_options.working_directory} mlfeatures -r ${setup_options.working_directory}/17-2-2015_1.pcap
 
   network_level:
 
