--- a/unsw-nb15.yaml
+++ b/unsw-nb15.yaml
@@ -9,7 +9,7 @@ step_feature_processing:
   packet_level:
     - rm -f ${setup_options.working_directory}/17-2-2015_1.argus
     - argus -S 60 -m -r ${setup_options.working_directory}/17-2-2015_1.pcap -w ${setup_options.working_directory}/17-2-2015_1.argus
-    - ./src/argus/ra_wrapper.bash ${setup_options.working_directory} 17-2-2015_1.argus argus_features.tsv ./src/step_feature_processing/packet_level/__load__.argus
+    - ./src/argus/ra_wrapper.bash ${setup_options.working_directory} 17-2-2015_1.argus argus_features.csv ./src/step_feature_processing/packet_level/__load__.argus
 
   flow_level:
     - ./src/zeek/zeek-wrapper.bash ${setup_options.current_directory}/src/zeek/packages ${setup_options.working_directory} mlfeatures -r ${setup_options.working_directory}/17-2-2015_1.pcap
@@ -26,3 +26,4 @@ step_label_processing:
   network_level:
 
 step_post_processing:
+  - python ./src/step_post_processing/combine_features.py ${setup_options.working_directory} unsw_nb15_dataset.csv
