Added a section for documentation about the dataset

--- a/unsw-nb15.yaml
+++ b/unsw-nb15.yaml
@@ -1,3 +1,9 @@
+documentation:
+  python_version: 3.8.10
+  zeek_version: 4.2.1
+  argus_version: 3.0.8.2
+  ra_client_version: 3.0.8 
+
 setup_options:
   current_directory: ENV_PWD
   working_directory: ENV_PWD/unsw_nb15_dataset
