--- a/config/unsw-nb15.yaml
+++ b/config/unsw-nb15.yaml
@@ -11,27 +11,27 @@ setup_options:
   working_directory: ENV_PWD/unsw_nb15_dataset
 
 step_acquire_source_data:
-  #- python src/step_acquire_source_data/downloader.py ${setup_options.working_directory}
+  - python src/step_acquire_source_data/downloader.py ${setup_options.working_directory}
 
 step_feature_processing:
   packet_level:
-    #- rm -f ${setup_options.working_directory}/17-2-2015_1.argus
-    #- argus -S 60 -m -r ${setup_options.working_directory}/17-2-2015_1.pcap -w ${setup_options.working_directory}/17-2-2015_1.argus
-    #- ./src/argus/ra_wrapper.bash ${setup_options.working_directory} 17-2-2015_1.argus argus_features.csv ./src/step_feature_processing/packet_level/__load__.argus
+    - rm -f ${setup_options.working_directory}/17-2-2015_1.argus
+    - argus -S 60 -m -r ${setup_options.working_directory}/17-2-2015_1.pcap -w ${setup_options.working_directory}/17-2-2015_1.argus
+    - ./src/argus/ra_wrapper.bash ${setup_options.working_directory} 17-2-2015_1.argus argus_features.csv ./src/step_feature_processing/packet_level/__load__.argus
 
   flow_level:
-    #- ./src/zeek/zeek-wrapper.bash ${setup_options.current_directory}/src/zeek/packages ${setup_options.working_directory} mlfeatures -r ${setup_options.working_directory}/17-2-2015_1.pcap
+    - ./src/zeek/zeek-wrapper.bash ${setup_options.current_directory}/src/zeek/packages ${setup_options.working_directory} mlfeatures -r ${setup_options.working_directory}/17-2-2015_1.pcap
 
   network_level:
-    #- ./src/python/python-wrapper.bash ${setup_options.working_directory} ${setup_options.current_directory}/src/step_feature_processing/network_level ${setup_options.working_directory}/features.log
+    - ./src/python/python-wrapper.bash ${setup_options.working_directory} ${setup_options.current_directory}/src/step_feature_processing/network_level ${setup_options.working_directory}/features.log
 
 step_label_processing:
   packet_level:
 
   flow_level:
-    #- python ./src/step_label_processing/flow_level/label.py ${setup_options.working_directory}
+    - python ./src/step_label_processing/flow_level/label.py ${setup_options.working_directory}
 
   network_level:
 
-step_post_processing:
+step_final_dataset_processing:
   - python ./src/step_post_processing/combine_features.py ${setup_options.working_directory} unsw_nb15_dataset.csv
